2008-06-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix conditional rules competing with config.status rules.
	* automake.in (handle_configure): Teach targets about the
	conditional config.status rule.
	* tests/cond39.test: Adjust test to expose this.

	For AC_CONFIG_LINKS(X,X), do not clean X in a non-VPATH build.
	* automake.in (rewrite_inputs_into_dependencies): Do distribute
	inputs where input and output name are equal.  This relies on
	the assumption that it only happens with AC_CONFIG_LINKS.
	(handle_configure) <CONFIG_CLEAN_VPATH_FILES>: New variable, for
	links where source and dest are equal.
	* lib/am/clean.am (distclean-generic): Remove, if build tree not
	equal source tree.
	* tests/conflnk4.test: New test.
	* tests/Makefile.am: Adjust.
	* NEWS: Update.

2008-06-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/automake.texi (Extending): Fix ambivalent wording.
	Report by Ben Pfaff.

2008-06-04  Karl Berry  <karl@freefriends.org>

	* doc/automake.texi (Install, Hard-Coded Install Paths):  Fix
	punctuation and markup.
	(Extending): Improve wording and clarify order semantics of
	*-local and *-hook targets.

2008-06-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/automake.texi (Extending): Fix grammar.
	Report by Karl Berry.

2008-05-13  Stepan Kasal  <skasal@redhat.com>

	Fix typos.
	* doc/automake.texi (Timeline): Reported by Reuben Thomas.
	* lib/am/remake-hdr.am: A few typos in comments.

2008-04-10  Eric Blake  <ebb9@byu.net>

	Prefer a released version of autoconf.
	* NEWS: Bump requirement to autoconf 2.62.
	* m4/init.m4 (AM_INIT_AUTOMAKE): Likewise.
	* configure.ac: Likewise.
	(AC_PREREQ): Remove check, done by AM_INIT_AUTOMAKE instead.

	AC_AUTOCONF_VERSION can inadvertently expand to a macro name.
	* m4/amversion.in (AM_SET_CURRENT_AUTOMAKE_VERSION): Use proper
	m4 quoting.
	* aclocal.in (write_aclocal): Likewise.
	* tests/missing6.test: New test.
	* tests/Makefile.am (TESTS): Run it.
	* tests/missing4.test: Adjust.
