@@ -1,5 +1,8 @@
 2008-06-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* lib/am/inst-vars.am (am__install_max): New variable.
+	(am__nobase_list): Use it.
+
 	Fix conditional rules competing with config.status rules.
 	* automake.in (handle_configure): Teach targets about the
 	conditional config.status rule.
